<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.julian.frun.Register">


    <TextView
        android:text="@string/greeting_message1"
        android:textSize="32sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/FrunInfo1"
        android:textColor ="#00D692"
        android:layout_centerHorizontal="true"
        android:textStyle="normal|bold|italic" />
    <TextView
        android:text="@string/greeting_message2"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/FrunInfo1"
        android:id="@+id/FrunInfo2"
        android:textColor ="#CD3333"
        android:layout_centerHorizontal="true"
        android:textStyle="normal|bold|italic" />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/imageButtonprofile"
        android:id="@+id/etName"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:hint="@string/hint_message_profile" />
    <Spinner
        android:id="@+id/age"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etName"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <TextView
        android:text="@string/age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textAge"
        android:layout_below="@+id/etName"
        android:layout_centerHorizontal="true"
        android:layout_alignParentLeft="true"
        android:layout_alignBottom="@+id/age" />

    <ImageButton
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:srcCompat="@android:drawable/ic_menu_crop"
        android:id="@+id/imageButtonprofile"
        android:layout_marginTop="19dp"
        android:layout_below="@+id/FrunInfo2"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:id="@+id/etLanguage"
        android:hint="@string/language"
        android:layout_below="@+id/radioGroupGender"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="48dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:id="@+id/radioGroupGender"
        android:layout_marginTop="64dp"
        android:layout_below="@+id/age"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radioButton_Male"
            android:id="@+id/radioButtonMale"
            android:layout_marginLeft="16dp"
            android:checked="false"
            android:buttonTint="#2ebb39"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/radioButton_Female"
            android:id="@+id/radioButtonFemale"
            android:checked="false"
            android:layout_marginLeft="200dp"
            android:buttonTint="#d32323"/>

    </RadioGroup>


</RelativeLayout>
